2008-05-07  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin-cleanup.c (gimp_plug_in_cleanup_item):
	commented out debug message.

2008-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/blur-gauss-selective.c: allocate temporary
	memory on the stack. Minor code cleanups.

2008-05-06  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c: split
	gimp_plug_in_handle_tile_request() into two functions:
	gimp_plug_in_handle_tile_put() and gimp_plug_in_handle_tile_get().

2008-05-06  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c
	(gimp_plug_in_handle_proc_install): show an error message instead
	of crashing when a plug-in registers a prodecure with a NULL
	argument or return value name. Also introduce two macros which
	make the utf-8 validation of all strings much more readable.

2008-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gbr.c: improved procedure blurb and help.

	* libgimpcolor/gimpcolorspace.c: inline gimp_hsl_value() and
	gimp_hsl_value_int().

2008-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/3d-outline.scm: applied patch from
	 Ulf-D. Ehlert. Makes the vacated region, which is created when
	 specifying a non-zero shadow offset, to be filled with the
	 background color (white) instead of transparency (bug #530216).

2008-05-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilestore.c
	(gimp_color_profile_store_load_profile): check if the file exists
	before adding it to the history. Fixes bug #528958.

2008-05-05  Michael Natterer  <mitch@gimp.org>

	* app/actions/drawable-commands.c
	(drawable_levels_stretch_cmd_callback): the second parameter of
	gimp_drawable_levels_stretch() is now a GimpProgress.

2008-05-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp-mask.c (gen_convolve_matrix): fixed
	algorithm to calculate the center value. Fixes bug #530077.

2008-05-05  Sven Neumann  <sven@gimp.org>
