@@ -1,3 +1,8 @@
+2008-05-07  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/tools/gimpcroptool.c (gimp_crop_tool_image_changed): Make it
+	feel like a class member function by G_CONNECT_SWAPPED-izing it.
+
 2008-05-07  Sven Neumann  <sven@gimp.org>
 
 	* app/plug-in/gimpplugin-cleanup.c (gimp_plug_in_cleanup_item):
